--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
+    "@coinbase/coinbase-sdk": "^0.1.1",
     "typescript": "^5.4.5",
     "@jest/types": "^29.7.1",
     "jest": "^29.7.1",
