--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@pythnetwork/client": "^2.22.0",
     "@rainbow-me/rainbowkit": "^2.2.1",
     "@tanstack/react-query": "^5.62.2",
+    "@uniswap/redux-multicall": "^1.1.8",
     "@vercel/analytics": "^1.4.1",
     "@web3-react/core": "^8.2.3",
     "axios": "^1.7.8",
@@ -36,6 +37,7 @@
     "dayjs": "^1.11.13",
     "ethers": "^6.13.4",
     "framer-motion": "^11.11.17",
+    "jotai": "^2.10.3",
     "lodash": "^4.17.21",
     "next": "^15.0.3",
     "react": "^18.3.1",
