--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@uniswap/redux-multicall": "^1.1.8",
     "@vercel/analytics": "^1.4.1",
     "@web3-react/core": "^8.2.3",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
+    "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "ethers": "^6.13.4",
@@ -44,10 +46,16 @@
     "jotai": "^2.10.3",
     "lodash": "^4.17.21",
     "next": "^15.0.3",
+    "postcss": "^8.4.49",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-jazzicon": "^1.0.4",
     "sharp": "^0.33.5",
+    "tailwindcss": "^3.4.16",
     "viem": "^2.21.53",
     "wagmi": "^2.13.3",
     "zustand": "^5.0.1"
