--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ NEXT_PUBLIC_QUICKNODE_OP_RPC_URL=""
 NEXT_PUBLIC_COINBASE_APP_ID=""
 NEXT_PUBLIC_QUICKNODE_POLYGON_RPC_URL=""
 NEXT_PUBLIC_MOONPAY_API="https://api.moonpay.com"
+NEXT_PUBLIC_MOONPAY_API_KEY="https://api.moonpay.com"
 NEXT_PUBLIC_MOONPAY_LINK="https://us-central1-zybra-mobile.cloudfunctions.net/signMoonpayLinkV2?platform=web&env=staging"
 NEXT_PUBLIC_MOONPAY_PUBLISHABLE_KEY="pk_test_DycfESRid31UaSxhI5yWKe1r5E5kKSz"
 NEXT_PUBLIC_SENTRY_DSN="https://a3c62e400b8748b5a8d007150e2f38b7@o1037921.ingest.sentry.io/4504255148851200"
