--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
   ],
   "rules": {
     "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-unused-vars":"off",
     "import/order": [
       "error",
       {
