--- a/package.json
+++ b/package.json
@@ -31,31 +31,32 @@
     "@ethersproject/providers": "^5.7.2",
     "@moonpay/moonpay-react": "^1.8.2",
     "@pythnetwork/client": "^2.22.0",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.5",
     "@rainbow-me/rainbowkit": "^2.2.1",
     "@tanstack/react-query": "^5.62.2",
     "@uniswap/redux-multicall": "^1.1.8",
     "@vercel/analytics": "^1.4.1",
     "@web3-react/core": "^8.2.3",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
     "chart.js": "^4.4.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "ethers": "^6.13.4",
     "framer-motion": "^11.11.17",
     "jotai": "^2.10.3",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.468.0",
     "next": "^15.0.3",
-    "postcss": "^8.4.49",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-jazzicon": "^1.0.4",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.16",
     "viem": "^2.21.53",
     "wagmi": "^2.13.3",
     "zustand": "^5.0.1"
@@ -69,6 +70,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
@@ -79,7 +81,9 @@
     "jest": "*",
     "jest-environment-jsdom": "*",
     "msw": "^2.5.2",
+    "postcss": "^8.4.49",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.4.5"
   },
   "keywords": [
