--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,8 @@
   "rules": {
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-unused-vars":"off",
+     "css.lint.unknownAtRules": "ignore",
+  "tailwindCSS.experimental.configFile": "./tailwind.config.js",
     "import/order": [
       "error",
       {
