--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.8.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-jazzicon": "^1.0.4",
