--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zybra-finance",
+  "name": "zybra-frontend",
   "version": "1.1.0",
   "description": "Zybra Finance: A Real-World Asset (RWA) based Liquid Lending Protocol.",
   "author": "Your Name <your-email@example.com>",
@@ -31,10 +31,12 @@
     "@ethersproject/providers": "^5.7.2",
     "@moonpay/moonpay-react": "^1.8.2",
     "@pythnetwork/client": "^2.22.0",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.5",
     "@rainbow-me/rainbowkit": "^2.2.1",
     "@tanstack/react-query": "^5.62.2",
+    "@tanstack/react-table": "^8.20.6",
     "@uniswap/redux-multicall": "^1.1.8",
     "@vercel/analytics": "^1.4.1",
     "@web3-react/core": "^8.2.3",
@@ -45,6 +47,8 @@
     "dayjs": "^1.11.13",
     "ethers": "^6.13.4",
     "framer-motion": "^11.11.17",
+    "highcharts": "^12.0.2",
+    "highcharts-react-official": "^3.2.1",
     "jotai": "^2.10.3",
     "jsbi": "^4.3.0",
     "lodash": "^4.17.21",
@@ -56,10 +60,13 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-jazzicon": "^1.0.4",
     "recharts": "^2.15.0",
     "sharp": "^0.33.5",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.53",
     "wagmi": "^2.13.3",
     "yahoo-finance2": "^2.13.2",
